# polymat

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  ruff.toml
src/polymat/: types.py
src/polymat/calibration/: error_measures.py  fitness_functions.py  solvers.py
src/polymat/calibration/solvers/: elastic_fit.py  multi_test.py  single_test.py
src/polymat/materials/time_invariant/: eight_chain.py  mooney.py  neo_hook.py  ogden.py  yeoh.py
src/polymat/mechanics/: deformation.py  elastic_deformation.py  incompressible_deformation.py
src/polymat/scripts/: main.py
test/: mechanics.py  test_plots.py
test/calibration/: test_error_measures.py  test_fitness_functions.py  test_solvers.py
test/materials/: test_ec.py  test_mooney.py  test_neohook.py  test_ogden.py  test_yeoh.py
test/mechanics/: test_deformation.py  test_incompressible_deformation.py
